feat(backend): improve security config, exception handling, and service stability
- Add @EnableMethodSecurity and AccessDeniedException handler
- Relax rate limits for development (60->300 req/min, 5->100 login attempts)
- Fix EncryptionServiceImpl property injection (encryption.key)
- Add @Transactional to RefreshTokenService
- Add @JsonIgnoreProperties and @JsonIgnore on User entity lazy fields
- Add /api/auth path alias alongside /api/v1/auth
- Exclude AdminWebSocketController from audit logging aspect
- Wrap WebSocket broadcast in UserServiceImpl with try-catch
- Add H2 test dependency to pom.xml
- Disable Redis health check so app stays UP when Redis is down
- Add CORS fallback for development when no origins configured
- Add ENCRYPTION_KEY environment variable configuration